--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -15,6 +15,13 @@
       <ion-icon name="send"></ion-icon>
       <ion-label>Movies</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="light">
+      <ion-icon name="send"></ion-icon>
+      <ion-label>Light</ion-label>
+    </ion-tab-button>
+
+
   </ion-tab-bar>
 
 </ion-tabs>
